@@ -3,6 +3,7 @@ ChangeLog for pommed
 
 version 1.34:
 	- pommed: be more careful when invoking eject (Alioth #312213).
+	- pommed: add the nouveau sysfs backlight driver.
 
 version 1.33:
 	- pommed: added support for the MacBook6,1 (October 2009).
